Adding changes on web dev

--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -125,15 +125,18 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original-wordmark.svg" />
                 </div>
-                <div class="carousel">
-                    <div class="track">
-                        <img src="src/Webdev_HCSandbox/Web.png" alt="Website" class="slide">
-                        <img src="src/Webdev_HCSandbox/game1.png" alt="Game Example" class="slide">
-                        <img src="src/Webdev_HCSandbox/Mobile.png" alt="Mobile" class="slide">
+                <a href="https://hcandbox.vercel.app/">
+                    <div class="carousel">
+                        <div class="track">
+                            <img src="src/Webdev_HCSandbox/pcmain.png" alt="PC Preview" class="slide">
+                            <img src="src/Webdev_HCSandbox/rps.png" alt="Games" class="slide">
+                            <img src="src/Webdev_HCSandbox/prev2.png" alt="Mobile Preview" class="slide">
+                            <img src="src/Webdev_HCSandbox/prev1.png" alt="Mobile Preview" class="slide">
+                        </div>
+                        <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                        <button class="next"><i class="fas fa-chevron-right"></i></button>
                     </div>
-                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                    <button class="next"><i class="fas fa-chevron-right"></i></button>
-                </div>
+                </a>
                 <div class="desc">
                     <p>
                         I advanced my front-end development skills through hands-on projects using React.js and Tailwind CSS. 
