--- a/views/data.ejs
+++ b/views/data.ejs
@@ -71,24 +71,22 @@
             </div>
         </div>
         <div class="project-item">
-            <h1>Data Analytics</h1>
+            <a href="https://kualitasudarastasiunchina.streamlit.app/"><h1>Data Analytics</h1></a>
             <div class="carousel-used">
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/streamlit/streamlit-original.svg" />
                 </div>
-                <a href="https://kualitasudarastasiunchina.streamlit.app/">
-                    <div class="carousel">
-                        <div class="track">
-                            <img src="src\Data_AirQualityChina\best_month.png" alt="Best Month Graphics" class="slide">
-                            <img src="src\Data_AirQualityChina\five_years.png" alt="Five Years Graphics" class="slide">
-                            <img src="src\Data_AirQualityChina\pollutantbased.png" alt="Pollutant Based Graphics" class="slide">
-                            <img src="src\Data_AirQualityChina\whatis.png" alt="Dictionary" class="slide">
-                        </div>
-                        <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                        <button class="next"><i class="fas fa-chevron-right"></i></button>
+                <div class="carousel">
+                    <div class="track">
+                        <img src="src\Data_AirQualityChina\best_month.png" alt="Best Month Graphics" class="slide">
+                        <img src="src\Data_AirQualityChina\five_years.png" alt="Five Years Graphics" class="slide">
+                        <img src="src\Data_AirQualityChina\pollutantbased.png" alt="Pollutant Based Graphics" class="slide">
+                        <img src="src\Data_AirQualityChina\whatis.png" alt="Dictionary" class="slide">
                     </div>
-                </a>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div> 
                 <div class="desc">
                     <p>
                         This project involved the analysis of air quality data collected from various stations across China, 
