--- a/views/webdev.ejs
+++ b/views/webdev.ejs
@@ -116,7 +116,7 @@
         </div>
 
         <div class="project-item">
-            <h1>HC Sandbox</h1>
+            <a href="https://hcandbox.vercel.app/"><h1>HC Sandbox</h1></a>
             <div class="carousel-used">
                 <div class="used">
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" />
@@ -125,18 +125,16 @@
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
                     <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/tailwindcss/tailwindcss-original-wordmark.svg" />
                 </div>
-                <a href="https://hcandbox.vercel.app/">
-                    <div class="carousel">
-                        <div class="track">
-                            <img src="src/Webdev_HCSandbox/pcmain.png" alt="PC Preview" class="slide">
-                            <img src="src/Webdev_HCSandbox/rps.png" alt="Games" class="slide">
-                            <img src="src/Webdev_HCSandbox/prev2.png" alt="Mobile Preview" class="slide">
-                            <img src="src/Webdev_HCSandbox/prev1.png" alt="Mobile Preview" class="slide">
-                        </div>
-                        <button class="prev"><i class="fas fa-chevron-left"></i></button>
-                        <button class="next"><i class="fas fa-chevron-right"></i></button>
+                <div class="carousel">
+                    <div class="track">
+                        <img src="src/Webdev_HCSandbox/pcmain.png" alt="PC Preview" class="slide">
+                        <img src="src/Webdev_HCSandbox/rps.png" alt="Games" class="slide">
+                        <img src="src/Webdev_HCSandbox/prev2.png" alt="Mobile Preview" class="slide">
+                        <img src="src/Webdev_HCSandbox/prev1.png" alt="Mobile Preview" class="slide">
                     </div>
-                </a>
+                    <button class="prev"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next"><i class="fas fa-chevron-right"></i></button>
+                </div>
                 <div class="desc">
                     <p>
                         I advanced my front-end development skills through hands-on projects using React.js and Tailwind CSS. 
